objects/ASI_CRM_Image_Outlet_Plan__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Actual_No_of_Image_Outlet__c</fullName>
        <label>Actual No of Image Outlet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY13/14</fullName>
                </value>
                <value>
                    <fullName>FY14/15</fullName>
                </value>
                <value>
                    <fullName>FY15/16</fullName>
                </value>
                <value>
                    <fullName>FY16/17</fullName>
                </value>
                <value>
                    <fullName>FY17/18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Planned_No_of_Image_Outlet__c</fullName>
        <label>Planned No of Image Outlet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>Image Outlet Plan</relationshipLabel>
        <relationshipName>ASI_CRM_Image_Outlet_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Channel</label>
        <referenceTo>ASI_MFM_Sub_Channel__c</referenceTo>
        <relationshipLabel>Image Outlet Plan</relationshipLabel>
        <relationshipName>ASI_CRM_Image_Outlet_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Image Outlet Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Sub_Channel__c</columns>
        <columns>ASI_CRM_Fiscal_Year__c</columns>
        <columns>ASI_CRM_Planned_No_of_Image_Outlet__c</columns>
        <columns>ASI_CRM_Actual_No_of_Image_Outlet__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IOP-{000000}</displayFormat>
        <label>Image Outlet Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Image Outlet Plan</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>